syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

import "google/api/annotations.proto";

package todoit;

service ToDoIt{

//c
	rpc CreateToDo(CreateToDoRequest) returns(CreateToDoResponse){
		option (google.api.http) = {
			post: "/v1/todo",
			body: "*"
		};
	}
//r
	rpc ReadToDo(ReadToDoRequest) returns(ReadToDoResponse){
			option (google.api.http) = {
			get: "/v1/todo/{id}" 
		};
	}
//rall
	rpc GetAllToDo(GetAllToDoRequest) returns(GetAllToDoResponse){
	
		option (google.api.http) = {
			get: "/v1/todo" 
		};
	}
//up
	rpc UpdateToDo(UpdateToDoRequest) returns(UpdateToDoResponse){
		option (google.api.http) = {
			put : "/v1/todo",
			body : "*"
		};
	}
//del
	rpc DeleteToDo(DeleteToDoRequest) returns(DeleteToDoResponse){
		option (google.api.http) = {
			delete: "/v1/todo/{id}"		
		};
	}
}

message CreateToDoRequest{
	string title = 1;
	string description = 2;
}??

message CreateToDoResponse{
	int32 id = 1;
} 
message ReadToDoRequest{
	int32 id = 1;
}

message ReadToDoResponse{
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message GetAllToDoRequest{}

message GetAllToDoResponse{
	repeated ReadToDoResponse to_do = 1;
}

message UpdateToDoRequest{
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message UpdateToDoResponse{
	int32 id = 1;
}

message DeleteToDoRequest{
	int32 id = 1;
}

message DeleteToDoResponse{
	int32 id = 1;
}